k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bittuly
  labels:
    app.kubernetes.io/name: bittuly
